--- a/MvcCoreSession/MvcCoreSession.csproj
+++ b/MvcCoreSession/MvcCoreSession.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="System.Runtime.Serialization.Formatters" Version="10.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
